getting data from OpenDLV into ISO_Object demo
Signed-off-by: Christian Berger <christian.berger@gu.se>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,27 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # However, RPATH has higher priority than LD_LIBRARY_PATH, while RUNPATH has lower priority
 set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--disable-new-dtags")
 
+################################################################################
+# Defining the relevant versions of OpenDLV Standard Message Set and libcluon.
+set(OPENDLV_STANDARD_MESSAGE_SET opendlv-standard-message-set-v0.9.6.odvd)
+set(CLUON_COMPLETE cluon-complete-v0.0.145.hpp)
+
+################################################################################
+# Extract cluon-msc from cluon-complete.hpp.
+add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/cluon-msc
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/inc/${CLUON_COMPLETE} ${CMAKE_BINARY_DIR}/cluon-complete.hpp
+    COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/cluon-complete.hpp ${CMAKE_BINARY_DIR}/cluon-complete.cpp
+    COMMAND ${CMAKE_CXX_COMPILER} -o ${CMAKE_BINARY_DIR}/cluon-msc ${CMAKE_BINARY_DIR}/cluon-complete.cpp -std=c++14 -pthread -D HAVE_CLUON_MSC
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/inc/${CLUON_COMPLETE})
+
+################################################################################
+# Generate opendlv-standard-message-set.hpp from ${OPENDLV_STANDARD_MESSAGE_SET} file.
+add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/opendlv-standard-message-set.hpp
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${CMAKE_BINARY_DIR}/cluon-msc --cpp --out=${CMAKE_BINARY_DIR}/opendlv-standard-message-set.hpp ${CMAKE_CURRENT_SOURCE_DIR}/inc/${OPENDLV_STANDARD_MESSAGE_SET}
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/inc/${OPENDLV_STANDARD_MESSAGE_SET} ${CMAKE_BINARY_DIR}/cluon-msc)
+
 
 # Build flags
 set(BUILDING_FOR_ANDROID OFF CACHE BOOL "Building for Android")
@@ -111,6 +132,11 @@ find_package(Boost REQUIRED COMPONENTS program_options)
 
 # Demo target, only build if not swigging
 add_executable(${ISOOBJECT_TEST} demoIsoObject.cpp)
+
+# Add dependency to OpenDLV Standard Message Set.
+add_custom_target(generate_opendlv_standard_message_set_hpp DEPENDS ${CMAKE_BINARY_DIR}/opendlv-standard-message-set.hpp)
+add_dependencies(${ISOOBJECT_TEST} generate_opendlv_standard_message_set_hpp)
+include_directories(SYSTEM ${CMAKE_BINARY_DIR})
 
 target_include_directories(${ISOOBJECT_TEST} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/inc
